mixin: overflow fix

--- a/source/styl/core/mixin.styl
+++ b/source/styl/core/mixin.styl
@@ -197,4 +197,4 @@ overflow(key)
 		text-overflow ellipsis
 		white-space nowrap
 	else
-		overflow arg
+		overflow key
